--- a/ur_ws/src/easy_ur_control/config/ur_controllers.yaml
+++ b/ur_ws/src/easy_ur_control/config/ur_controllers.yaml
@@ -224,8 +224,7 @@ cartesian_compliance_controller:
     # between end_effector_link and robot_base_link.  If that's not the case,
     # the controllers won't initialize and will emit an error message.
     # ft_sensor_ref_link: "ft_sensor0_wrench" "ur5e_base_link"
-    ft_sensor_ref_link: "ee_link"
-
+    ft_sensor_ref_link: "ur5e_tool0" #"ee_link"
 
     # This is the link that the robot feels compliant about. It does not need
     # to coincide with the end_effector_link, but for many use cases, this
@@ -261,9 +260,15 @@ cartesian_compliance_controller:
     # ft_sensor_topic: "/force_torque_sensor_broadcaster/wrench"
 
     stiffness:  # w.r.t. compliance_ref_link coordinates
-        trans_x: 700.0
-        trans_y: 700.0
-        trans_z: 700.0
+        # trans_x: 100.0
+        # trans_y: 100.0
+        # trans_z: 100.0
+        # rot_x: 10.0
+        # rot_y: 10.0
+        # rot_z: 10.0
+        trans_x: 1500.0
+        trans_y: 1500.0
+        trans_z: 1500.0
         rot_x: 50.0
         rot_y: 50.0
         rot_z: 50.0
@@ -274,12 +279,12 @@ cartesian_compliance_controller:
 
     # For all controllers, these gains are w.r.t. the robot_base_link coordinates.
     pd_gains:
-        # trans_x: {p: 0.05, d: 0.005}
-        # trans_y: {p: 0.05, d: 0.005}
-        # trans_z: {p: 0.05, d: 0.005}
-        trans_x: {p: 0.1, d: 0.01}
-        trans_y: {p: 0.1, d: 0.01}
-        trans_z: {p: 0.1, d: 0.01}
+        trans_x: {p: 0.05, d: 0.005}
+        trans_y: {p: 0.05, d: 0.005}
+        trans_z: {p: 0.05, d: 0.005}
+        # trans_x: {p: 0.75, d: 0.0075}
+        # trans_y: {p: 0.75, d: 0.0075}
+        # trans_z: {p: 0.75, d: 0.0075}
         rot_x: {p: 1.5}
         rot_y: {p: 1.5}
         rot_z: {p: 1.5}
@@ -287,9 +292,9 @@ cartesian_compliance_controller:
 cartesian_force_controller:
   ros__parameters:
     # See the cartesian_compliance_controller
-    end_effector_link: "ur5e_tool0"
-    robot_base_link: "ur5e_base_link"
-    ft_sensor_ref_link: "ft_sensor0_wrench"
+    end_effector_link: "ee_link" #"ur5e_tool0"
+    robot_base_link: "world" #"ur5e_base_link"
+    ft_sensor_ref_link: "ur5e_tool0" #"ft_sensor0_wrench"
     joints:
       - ur5e_shoulder_pan_joint
       - ur5e_shoulder_lift_joint
