--- a/ur_ws/src/easy_ur_control/config/ur_controllers.yaml
+++ b/ur_ws/src/easy_ur_control/config/ur_controllers.yaml
@@ -66,19 +66,19 @@ controller_manager:
 speed_scaling_state_broadcaster:
   ros__parameters:
     state_publish_rate: 100.0
-    tf_prefix: "ur5e_"
+    tf_prefix: "$(var ur_type)_"
 
 io_and_status_controller:
   ros__parameters:
-    tf_prefix: "ur5e_"
+    tf_prefix: "$(var ur_type)_"
 
 ur_configuration_controller:
   ros__parameters:
-    tf_prefix: "ur5e_"
+    tf_prefix: "$(var ur_type)_"
 
 force_torque_sensor_broadcaster:
   ros__parameters:
-    sensor_name: ur5e_tcp_fts_sensor
+    sensor_name: $(var ur_type)_tcp_fts_sensor
     state_interface_names:
       - force.x
       - force.y
@@ -86,19 +86,19 @@ force_torque_sensor_broadcaster:
       - torque.x
       - torque.y
       - torque.z
-    frame_id: ur5e_tool0
+    frame_id: $(var ur_type)_tool0
     topic_name: ft_data
 
 
 joint_trajectory_controller:
   ros__parameters:
     joints:
-      - ur5e_shoulder_pan_joint
-      - ur5e_shoulder_lift_joint
-      - ur5e_elbow_joint
-      - ur5e_wrist_1_joint
-      - ur5e_wrist_2_joint
-      - ur5e_wrist_3_joint
+      - $(var ur_type)_shoulder_pan_joint
+      - $(var ur_type)_shoulder_lift_joint
+      - $(var ur_type)_elbow_joint
+      - $(var ur_type)_wrist_1_joint
+      - $(var ur_type)_wrist_2_joint
+      - $(var ur_type)_wrist_3_joint
     command_interfaces:
       - position
     state_interfaces:
@@ -110,23 +110,23 @@ joint_trajectory_controller:
     constraints:
       stopped_velocity_tolerance: 0.2
       goal_time: 0.0
-      ur5e_shoulder_pan_joint: { trajectory: 0.2, goal: 0.1 }
-      ur5e_shoulder_lift_joint: { trajectory: 0.2, goal: 0.1 }
-      ur5e_elbow_joint: { trajectory: 0.2, goal: 0.1 }
-      ur5e_wrist_1_joint: { trajectory: 0.2, goal: 0.1 }
-      ur5e_wrist_2_joint: { trajectory: 0.2, goal: 0.1 }
-      ur5e_wrist_3_joint: { trajectory: 0.2, goal: 0.1 }
+      $(var ur_type)_shoulder_pan_joint: { trajectory: 0.2, goal: 0.1 }
+      $(var ur_type)_shoulder_lift_joint: { trajectory: 0.2, goal: 0.1 }
+      $(var ur_type)_elbow_joint: { trajectory: 0.2, goal: 0.1 }
+      $(var ur_type)_wrist_1_joint: { trajectory: 0.2, goal: 0.1 }
+      $(var ur_type)_wrist_2_joint: { trajectory: 0.2, goal: 0.1 }
+      $(var ur_type)_wrist_3_joint: { trajectory: 0.2, goal: 0.1 }
 
 
 scaled_joint_trajectory_controller:
   ros__parameters:
     joints:
-      - ur5e_shoulder_pan_joint
-      - ur5e_shoulder_lift_joint
-      - ur5e_elbow_joint
-      - ur5e_wrist_1_joint
-      - ur5e_wrist_2_joint
-      - ur5e_wrist_3_joint
+      - $(var ur_type)_shoulder_pan_joint
+      - $(var ur_type)_shoulder_lift_joint
+      - $(var ur_type)_elbow_joint
+      - $(var ur_type)_wrist_1_joint
+      - $(var ur_type)_wrist_2_joint
+      - $(var ur_type)_wrist_3_joint
     command_interfaces:
       - position
     state_interfaces:
@@ -138,68 +138,68 @@ scaled_joint_trajectory_controller:
     constraints:
       stopped_velocity_tolerance: 0.2
       goal_time: 0.0
-      ur5e_shoulder_pan_joint: { trajectory: 0.2, goal: 0.1 }
-      ur5e_shoulder_lift_joint: { trajectory: 0.2, goal: 0.1 }
-      ur5e_elbow_joint: { trajectory: 0.2, goal: 0.1 }
-      ur5e_wrist_1_joint: { trajectory: 0.2, goal: 0.1 }
-      ur5e_wrist_2_joint: { trajectory: 0.2, goal: 0.1 }
-      ur5e_wrist_3_joint: { trajectory: 0.2, goal: 0.1 }
-    speed_scaling_interface_name: ur5e_speed_scaling/speed_scaling_factor
+      $(var ur_type)_shoulder_pan_joint: { trajectory: 0.2, goal: 0.1 }
+      $(var ur_type)_shoulder_lift_joint: { trajectory: 0.2, goal: 0.1 }
+      $(var ur_type)_elbow_joint: { trajectory: 0.2, goal: 0.1 }
+      $(var ur_type)_wrist_1_joint: { trajectory: 0.2, goal: 0.1 }
+      $(var ur_type)_wrist_2_joint: { trajectory: 0.2, goal: 0.1 }
+      $(var ur_type)_wrist_3_joint: { trajectory: 0.2, goal: 0.1 }
+    speed_scaling_interface_name: $(var ur_type)_speed_scaling/speed_scaling_factor
 
 passthrough_trajectory_controller:
   ros__parameters:
-    tf_prefix: "ur5e_"
+    tf_prefix: "$(var ur_type)_"
     joints:
-      - ur5e_shoulder_pan_joint
-      - ur5e_shoulder_lift_joint
-      - ur5e_elbow_joint
-      - ur5e_wrist_1_joint
-      - ur5e_wrist_2_joint
-      - ur5e_wrist_3_joint
+      - $(var ur_type)_shoulder_pan_joint
+      - $(var ur_type)_shoulder_lift_joint
+      - $(var ur_type)_elbow_joint
+      - $(var ur_type)_wrist_1_joint
+      - $(var ur_type)_wrist_2_joint
+      - $(var ur_type)_wrist_3_joint
     state_interfaces:
       - position
       - velocity
-    speed_scaling_interface_name: ur5e_speed_scaling/speed_scaling_factor
+    speed_scaling_interface_name: $(var ur_type)_speed_scaling/speed_scaling_factor
 
 forward_velocity_controller:
   ros__parameters:
     joints:
-      - ur5e_shoulder_pan_joint
-      - ur5e_shoulder_lift_joint
-      - ur5e_elbow_joint
-      - ur5e_wrist_1_joint
-      - ur5e_wrist_2_joint
-      - ur5e_wrist_3_joint
+      - $(var ur_type)_shoulder_pan_joint
+      - $(var ur_type)_shoulder_lift_joint
+      - $(var ur_type)_elbow_joint
+      - $(var ur_type)_wrist_1_joint
+      - $(var ur_type)_wrist_2_joint
+      - $(var ur_type)_wrist_3_joint
     interface_name: velocity
 
 forward_position_controller:
   ros__parameters:
     joints:
-      - ur5e_shoulder_pan_joint
-      - ur5e_shoulder_lift_joint
-      - ur5e_elbow_joint
-      - ur5e_wrist_1_joint
-      - ur5e_wrist_2_joint
-      - ur5e_wrist_3_joint
+      - $(var ur_type)_shoulder_pan_joint
+      - $(var ur_type)_shoulder_lift_joint
+      - $(var ur_type)_elbow_joint
+      - $(var ur_type)_wrist_1_joint
+      - $(var ur_type)_wrist_2_joint
+      - $(var ur_type)_wrist_3_joint
 
 force_mode_controller:
   ros__parameters:
-    tf_prefix: "ur5e_"
+    tf_prefix: "$(var ur_type)_"
 
 freedrive_mode_controller:
   ros__parameters:
-    tf_prefix: "ur5e_"
+    tf_prefix: "$(var ur_type)_"
 
 tcp_pose_broadcaster:
   ros__parameters:
-    frame_id: ur5e_base
-    pose_name: ur5e_tcp_pose
+    frame_id: $(var ur_type)_base
+    pose_name: $(var ur_type)_tcp_pose
     tf:
-      child_frame_id: ur5e_tool0_controller
+      child_frame_id: $(var ur_type)_tool0_controller
 
 tool_contact_controller:
   ros__parameters:
-    tf_prefix: "ur5e_"
+    tf_prefix: "$(var ur_type)_"
 
 ## Custom controllers for Cartesian control
 
@@ -224,7 +224,7 @@ cartesian_compliance_controller:
     # between end_effector_link and robot_base_link.  If that's not the case,
     # the controllers won't initialize and will emit an error message.
     # ft_sensor_ref_link: "ft_sensor0_wrench" "ur5e_base_link"
-    ft_sensor_ref_link: "ur5e_tool0" #"ee_link"
+    ft_sensor_ref_link: "ur3e_tool0" #"ee_link"
 
     # This is the link that the robot feels compliant about. It does not need
     # to coincide with the end_effector_link, but for many use cases, this
@@ -236,12 +236,12 @@ cartesian_compliance_controller:
     compliance_ref_link: "ee_link"
 
     joints:
-      - ur5e_shoulder_pan_joint
-      - ur5e_shoulder_lift_joint
-      - ur5e_elbow_joint
-      - ur5e_wrist_1_joint
-      - ur5e_wrist_2_joint
-      - ur5e_wrist_3_joint
+      - $(var ur_type)_shoulder_pan_joint
+      - $(var ur_type)_shoulder_lift_joint
+      - $(var ur_type)_elbow_joint
+      - $(var ur_type)_wrist_1_joint
+      - $(var ur_type)_wrist_2_joint
+      - $(var ur_type)_wrist_3_joint
 
     # Choose between position or velocity.  In fact, the controllers allow to
     # set both at the same time, but not all drivers will support this.
@@ -266,9 +266,9 @@ cartesian_compliance_controller:
         # rot_x: 10.0
         # rot_y: 10.0
         # rot_z: 10.0
-        trans_x: 2000.0
-        trans_y: 2000.0
-        trans_z: 2000.0
+        trans_x: 500.0
+        trans_y: 500.0
+        trans_z: 500.0
         rot_x: 20.0
         rot_y: 20.0
         rot_z: 20.0
@@ -294,14 +294,14 @@ cartesian_force_controller:
     # See the cartesian_compliance_controller
     end_effector_link: "ee_link" #"ur5e_tool0"
     robot_base_link: "world" #"ur5e_base_link"
-    ft_sensor_ref_link: "ur5e_tool0" #"ft_sensor0_wrench"
+    ft_sensor_ref_link: "$(var ur_type)_tool0" #"ft_sensor0_wrench"
     joints:
-      - ur5e_shoulder_pan_joint
-      - ur5e_shoulder_lift_joint
-      - ur5e_elbow_joint
-      - ur5e_wrist_1_joint
-      - ur5e_wrist_2_joint
-      - ur5e_wrist_3_joint
+      - $(var ur_type)_shoulder_pan_joint
+      - $(var ur_type)_shoulder_lift_joint
+      - $(var ur_type)_elbow_joint
+      - $(var ur_type)_wrist_1_joint
+      - $(var ur_type)_wrist_2_joint
+      - $(var ur_type)_wrist_3_joint
 
     # See the cartesian_compliance_controller
     command_interfaces:
@@ -323,15 +323,15 @@ cartesian_motion_controller:
   ros__parameters:
 
     # See the cartesian_compliance_controller
-    end_effector_link: "ur5e_tool0"
-    robot_base_link: "ur5e_base_link"
+    end_effector_link: "$(var ur_type)_tool0"
+    robot_base_link: "$(var ur_type)_base_link"
     joints:
-      - ur5e_shoulder_pan_joint
-      - ur5e_shoulder_lift_joint
-      - ur5e_elbow_joint
-      - ur5e_wrist_1_joint
-      - ur5e_wrist_2_joint
-      - ur5e_wrist_3_joint
+      - $(var ur_type)_shoulder_pan_joint
+      - $(var ur_type)_shoulder_lift_joint
+      - $(var ur_type)_elbow_joint
+      - $(var ur_type)_wrist_1_joint
+      - $(var ur_type)_wrist_2_joint
+      - $(var ur_type)_wrist_3_joint
 
     # See the cartesian_compliance_controller
     command_interfaces:
@@ -352,26 +352,26 @@ cartesian_motion_controller:
 
 motion_control_handle:
   ros__parameters:
-    end_effector_link: "ur5e_tool0"
-    robot_base_link: "ur5e_base_link"
-    ft_sensor_ref_link: "ft_sensor0_wrench"
+    end_effector_link: "$(var ur_type)_tool0"
+    robot_base_link: "$(var ur_type)_base_link"
+    ft_sensor_ref_link: "$(var ur_type)_tool0"
     joints:
-      - ur5e_shoulder_pan_joint
-      - ur5e_shoulder_lift_joint
-      - ur5e_elbow_joint
-      - ur5e_wrist_1_joint
-      - ur5e_wrist_2_joint
-      - ur5e_wrist_3_joint
-      
+      - $(var ur_type)_shoulder_pan_joint
+      - $(var ur_type)_shoulder_lift_joint
+      - $(var ur_type)_elbow_joint
+      - $(var ur_type)_wrist_1_joint
+      - $(var ur_type)_wrist_2_joint
+      - $(var ur_type)_wrist_3_joint
+
 end_effector_controller:
   ros__parameters:
-    end_effector_link: "ur5e_tool0"
-    robot_base_link: "ur5e_base_link"
-    ft_sensor_ref_link: "ft_sensor0_wrench"
+    end_effector_link: "$(var ur_type)_tool0"
+    robot_base_link: "$(var ur_type)_base_link"
+    ft_sensor_ref_link: "$(var ur_type)_tool0"
     joints:
-      - ur5e_shoulder_pan_joint
-      - ur5e_shoulder_lift_joint
-      - ur5e_elbow_joint
-      - ur5e_wrist_1_joint
-      - ur5e_wrist_2_joint
-      - ur5e_wrist_3_joint
+      - $(var ur_type)_shoulder_pan_joint
+      - $(var ur_type)_shoulder_lift_joint
+      - $(var ur_type)_elbow_joint
+      - $(var ur_type)_wrist_1_joint
+      - $(var ur_type)_wrist_2_joint
+      - $(var ur_type)_wrist_3_joint
